excerpts.css
/* ... */
.blueDiagramBorderSm {
    border: 2px solid rgb(18, 44, 79);
    padding: 5px;
    background-color: #ffffff;
    border-radius: 5px;
}

/* CSS Motion */

.rotateDown {
    transform: rotate(45deg);
    animation-name: rotateD;
    animation-duration: 1s;
}

.rotateUp {
    transform: rotate(-45deg);
    animation-name: rotateU;
    animation-duration: 1s;
}

.start {
    margin-bottom: 90px;
    animation-name: up;
    animation-duration: 1s;
}

.end {
    margin-top: 90px;
    animation-name: down;
    animation-duration: 1s;
}

#clip {
    background-color: #ffffff;
    padding: 20px;
    border-radius: 5px;
    color: rgb(18, 44, 79);
}

.selected {
    background-color: #FFFFFF;
    border-radius: 5px;
}

.hidden {
    display: none;
}

.hidden890 {
    display: none;
}

.display545 {
    display: none;
}

/* Fonts (Weight, Colors, Style) */

.bold {
    font-weight: bold;
}

.blue {
    color: rgb(18, 44, 79);
}

/* HTML Elements */
p {
    margin-bottom: 14px;
}

/* Keyframes */

@keyframes addHeight {
    0% {
        height: 220px;
    }
    10% {
        height: 230px;
    }
    20% {
        height: 240px;
    }
    30% {
        height: 250px;
    }
    40% {
        height: 260px;
    }
    50% {
        height: 270px;
    }
    60% {
        height: 280px;
    }
    70% {
        height: 290px;
    }
    80% {
        height: 300px;
    }
    90% {
        height: 310px;
    }
    100% {
        height: 320px;
    }
}

@keyframes rotateU {
    0% {
        transform: rotate(0deg);
    }
    10% {
        transform: rotate(-5deg);
    }
    20% {
        transform: rotate(-10deg);
    }
    30% {
        transform: rotate(-15deg);
    }
    40% {
        transform: rotate(-20deg);
    }
    50% {
        transform: rotate(-25deg);
    }
    60% {
        transform: rotate(-30deg);
    }
    70% {
        transform: rotate(-35deg);
    }
    80% {
        transform: rotate(-40deg);
    }
    90% {
        transform: rotate(-45deg);
    }
}

@keyframes rotateD {
    0% {
        transform: rotate(0deg);
    }
    10% {
        transform: rotate(5deg);
    }
    20% {
        transform: rotate(10deg);
    }
    30% {
        transform: rotate(15deg);
    }
    40% {
        transform: rotate(20deg);
    }
    50% {
        transform: rotate(25deg);
    }
    60% {
        transform: rotate(30deg);
    }
    70% {
        transform: rotate(35deg);
    }
    80% {
        transform: rotate(40deg);
    }
    90% {
        transform: rotate(45deg);
    }
}

@keyframes up {
    0% {
        margin-bottom: 0px;
    }
    10% {
        margin-bottom: 10px;
    }
    20% {
        margin-bottom: 20px;
    }
    30% {
        margin-bottom: 30px;
    }
    40% {
        margin-bottom: 40px;
    }
    50% {
        margin-bottom: 50px;
    }
    60% {
        margin-bottom: 60px;
    }
    70% {
        margin-bottom: 70px;
    }
    80% {
        margin-bottom: 80px;
    }
    90% {
        margin-bottom: 90px;
    }
}

@keyframes down {
    0% {
        margin-top: 0px;
    }
    10% {
        margin-top: 10px;
    }
    20% {
        margin-top: 20px;
    }
    30% {
        margin-top: 30px;
    }
    40% {
        margin-top: 40px;
    }
    50% {
        margin-top: 50px;
    }
    60% {
        margin-top: 60px;
    }
    70% {
        margin-top: 70px;
    }
    80% {
        margin-top: 80px;
    }
    90% {
        margin-top: 90px;
    }
}

@media only screen and (max-width:1590px) {

    h3 {
        font-size: 1.3rem;
        padding: .5rem .25rem;
    }
}

@media only screen and (max-width:1460px) {

    h3 {
        font-size: 1.25rem;
    }

    .excerptDiv {
        width: 90%;
    }

    .ninePlus {
        width: 94%;
    }

    .nine {
        width: 94%;
    }

    .secondLook {
        padding: 2.5rem 1.5rem;
    }
}

@media only screen and (max-width:1275px) {

    .column1 {
        padding: 20px 10px;
    }

    h3 {
        font-size: 1.2rem;
    }

    h4 {
        font-size: 15px;
    }
}

@media only screen and (max-width:1220px) {

    p {
        font-size: 15px;
    }

    h6 {
        font-size: 1.1rem;
    }

    #clip {
        padding: 10px;
    }
}

@media only screen and (max-width:1170px) {

    p {
        font-size: 14.5px;
    }

    h6 {
        font-size: 1rem;
    }

    .excerptDiv {
        width: 94%;
    }

    h4 {
        font-size: 14.25px;
    }

}

@media only screen and (max-width:1120px) {

    p {
        font-size: 14px;
    }

    .excerptDiv {
        width: 96%;
    }

    h4 {
        font-size: 13.5px;
    }

    .ninePlus {
        width: 100%;
    }

    .nine {
        width: 100%;
    }

    h3 {
        font-size: 17.5px;
        line-height: 30px;
    }

    .column2 {
        height: 500px;
    }

}

@media only screen and (max-width:1060px) {

    p {
        font-size: 13.75px;
    }

    .excerptDiv {
        width: 98%;
    }

    h4 {
        font-size: 13px;
    }

    h3 {
        font-size: 17px;
    }

    h6 {
        font-size: 15px;
    }

}

@media only screen and (max-width:1020px) {
 
    .column1 {
        max-width: 350px;
    }

    h3 {
        font-size: 15px;
        line-height: 26px;
    }

    .column2 {
        height: 538px;
    }

    .secondLook {
        padding: 2.5rem 1rem;
    }

    .firstLook {
        padding: 2.5rem 2rem;
    }

    .goldDiagramBorder {
        padding: 15px 10px;
    }

}

@media only screen and (max-width:975px) {

    h4 {
        font-size: 12px;
    }

    .blueDiagramBorder {
        padding: 6px;
    }

    .nine {
        column-gap: 2px;
    }

    .ninePlus {
        column-gap: 2px;
    }

    .secondLook {
        padding: 2.5rem .75rem;
    }

    p {
        font-size: 14.5px;
    }

}
/* ... */

